# clipstack

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
scripts/: generate-icons.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  db.rs  lib.rs  main.rs  state.rs  tray.rs
src/components/: ClipItem.tsx  ClipList.tsx  ConfirmDialog.tsx  SearchBar.tsx  SettingsPanel.tsx
src/hooks/: useClips.ts  useKeyboard.ts  useSettings.ts
src/lib/: api.ts  formatTime.ts  theme.ts
src/types/: index.ts
